role endpoint + test + staring test with http request